--- a/form.html
+++ b/form.html
@@ -90,7 +90,7 @@ async function submit() {
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sacote"){
 	location.href = "chameleon.html";
-	}else if(lname.toLowerCase() == "de guzman"){
+	}else if(name.toLowerCase() == "melanie" && lname.toLowerCase() == "de guzman"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "rondain"){
 	location.href = "camel.html";
@@ -125,6 +125,8 @@ async function submit() {
 	}else if(lname.toLowerCase() == "paragas"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "tormis"){
+	location.href = "desertowl.html";
+	}else if(lname.toLowerCase() == "chu"){
 	location.href = "desertowl.html";
 	}else if(lname.toLowerCase() == "escaño"){
 	location.href = "wolf.html";
@@ -184,7 +186,7 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "lezada"){
 	location.href = "camel.html";
-	}else if(lname.toLowerCase() == "martinez"){
+	}else if(name.toLowerCase() == "johanna" && lname.toLowerCase() == "martinez"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "ngo"){
 	location.href = "camel.html";
@@ -224,6 +226,20 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "de la fuente"){
 	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "ang"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "de la fuente"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "alvardao"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "delmendo"){
+	location.href = "desertowl.html";
+	}else if(name.toLowerCase() == "andres" && lname.toLowerCase() == "martinez"){
+	location.href = "camel.html";
+	}else if(name.toLowerCase() == "melanie" && lname.toLowerCase() == "martinez"){
+	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "mercado"){
+	location.href = "camel.html";
 	}else { location.href = "error.html"
 	}
 				}
