--- a/form.html
+++ b/form.html
@@ -208,7 +208,7 @@ async function submit() {
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "sacobo"){
 	location.href = "chameleon.html";
-	}else if(lname.toLowerCase() == "labrado"){
+	}else if(lname.toLowerCase() == "labrador"){
 	location.href = "chameleon.html";
 	}else if(lname.toLowerCase() == "belza"){
 	location.href = "chameleon.html";
@@ -221,6 +221,10 @@ async function submit() {
 	}else if(lname.toLowerCase() == "sta. isabel"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "uriarte"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "matundan"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "gumangan"){
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "tubera"){
 	location.href = "camel.html";
