--- a/form.html
+++ b/form.html
@@ -234,7 +234,7 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "de la fuente"){
 	location.href = "wolf.html";
-	}else if(lname.toLowerCase() == "alvardao"){
+	}else if(lname.toLowerCase() == "alvarado"){
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "delmendo"){
 	location.href = "desertowl.html";
