--- a/form.html
+++ b/form.html
@@ -244,6 +244,10 @@ async function submit() {
 	location.href = "camel.html";
 	}else if(lname.toLowerCase() == "mercado"){
 	location.href = "camel.html";
+	}else if(lname.toLowerCase() == "ty"){
+	location.href = "wolf.html";
+	}else if(lname.toLowerCase() == "labrador"){
+	location.href = "desertfox.html";
 	}else { location.href = "error.html"
 	}
 				}
