--- a/form.html
+++ b/form.html
@@ -248,6 +248,8 @@ async function submit() {
 	location.href = "wolf.html";
 	}else if(lname.toLowerCase() == "labrador"){
 	location.href = "desertfox.html";
+	}else if(lname.toLowerCase() == "luistro"){
+	location.href = "desertfox.html";
 	}else { location.href = "error.html"
 	}
 				}
