--- a/form.html
+++ b/form.html
@@ -249,7 +249,7 @@ async function submit() {
 	}else if(lname.toLowerCase() == "labrador"){
 	location.href = "desertfox.html";
 	}else if(lname.toLowerCase() == "luistro"){
-	location.href = "desertfox.html";
+	location.href = "chameleon.html";
 	}else { location.href = "error.html"
 	}
 				}
